# bitrate_game

./: .gitignore  LICENSE  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: build.yml
envs/: environment.yml  requirements.txt
scripts/: build.py  strip_pygame.py
src/bitrate_game/: __init__.py  __main__.py  adapters.py  config.py  core.py  main.py  mode.py  renderer.py
