[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrate_game"
version = "0.3.3"
description = "GridQuest — spatial 3x3 selection bit-rate maximization game"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5",
]

[project.scripts]
bitrate-game = "bitrate_game.main:main"

[tool.setuptools.packages.find]
where = ["src"]
